# parallel-algorithms

./: .gitignore  CMakeLists.txt  README.md  filter.sh  make_all.sh  speedup.sh  timing.sh  wavelet_speed.sh
include/: basics.hpp  bsp.hpp  includes.hpp  png.hpp  utilities.hpp
primes/: CMakeLists.txt  bsp_sieve.cpp  sieve.cpp
primes_report/: bsp.hpp  bsp_sieve.cpp  report.tex
primes_scripts/: speedup.sh  test.sh  timing.sh
wavelet/: CMakeLists.txt  compressed_image.hpp  compressed_image_test.cpp  defines.hpp  jcmp.cpp  jcmp.hpp  jcmp_image.hpp  jcmp_image_test.cpp  jcmp_quantization.hpp  jcmp_quantization_test.cpp  mockup.cpp  periodic_iterator.hpp  periodic_iterator_test.cpp  striding_iterator.hpp  striding_iterator_test.cpp  wavelet.hpp  wavelet2.cpp  wavelet2.hpp  wavelet_1.hpp  wavelet_2.hpp  wavelet_constants.hpp  wavelet_parallel.hpp  wavelet_parallel_2D_mockup.cpp  wavelet_parallel_mockup.cpp  wavelet_test.cpp
wavelet_report/: Makefile  conc.tex  costs.gcx  dau.tex  images.tex  img.tex  intro.tex  optimize_costs.gcx  optimize_costs2.gcx  par.tex  preamble.tex  references.bib  report.tex  res.tex  style.tex
wavelet_report/results/: cart_m5_speedup  cart_p4_m1_basic  cart_p4_m5_basic  cart_p4_optm  mbp_p2_m1_basic  mbp_p2_m1_gain
wavelet_scripts/: convert.sh  optimal_m.sh  some_scripts.sh  speedup_p.sh  time.sh
